# P2P-TCP-Chat

./: .bazelrc  .clang-tidy  .clangd  .clangd-config  .clangd-ignore  .config  .dockerignore  .env.example  .gitignore  BUILD.bazel  Dockerfile.cicd  LICENSE  MODULE.bazel
.github/scripts/: install-compiler.sh  install-linters.sh
.github/workflows/: ci.yml  docker-build.yml
docker/: Dockerfile.app  Dockerfile.base  Dockerfile.ci  Dockerfile.production_build  compose.yaml
p2p_chat_client/: README.md  analysis_options.yaml  pubspec.yaml
p2p_chat_client/android/app/: build.gradle.kts
p2p_chat_client/android/app/src/main/: AndroidManifest.xml
p2p_chat_client/android/app/src/main/kotlin/com/example/p2p_chat_client/: MainActivity.kt
p2p_chat_client/ios/Runner/: Info.plist
p2p_chat_client/ios/Runner.xcodeproj/: project.pbxproj
p2p_chat_client/linux/: CMakeLists.txt
p2p_chat_client/linux/runner/: my_application.cc
p2p_chat_client/macos/Runner.xcodeproj/: project.pbxproj
p2p_chat_client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
p2p_chat_client/macos/Runner/Configs/: AppInfo.xcconfig
p2p_chat_client/test/: widget_test.dart
p2p_chat_client/web/: index.html  manifest.json
p2p_chat_client/windows/: CMakeLists.txt
p2p_chat_client/windows/runner/: Runner.rc  main.cpp
src/: BUILD.bazel  app.cpp  config.cpp  config.hpp  database.hpp  main.cpp  server.hpp  session.hpp
tests/: .clang-tidy  BUILD.bazel  test_gtest.cpp
