module(
    name = "p2p-tcp-chat",
    version = "0.1",
)

bazel_dep(name = "protobuf", version = "3.19.0")
bazel_dep(name = "postgres", version = "16.2")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.program_options", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.87.0")
bazel_dep(name = "boost.algorithm", version = "1.87.0")
bazel_dep(name = "boost.range", version = "1.87.0")
bazel_dep(name = "boost.serialization", version = "1.87.0")
bazel_dep(name = "boost.beast", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.uuid", version = "1.87.0")
bazel_dep(name = "rules_python", version = "0.35.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

# cpp lib
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "spdlog", version = "1.14.1")
bazel_dep(name = "magic_enum", version = "0.9.6")

# Tests frameworks
bazel_dep(name = "googletest", version = "1.15.2")

# benchmark
bazel_dep(name = "google_benchmark", version = "1.8.5")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# toolchains for compilets and libs
bazel_dep(name = "buildozer", version = "7.1.2")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "depend_on_what_you_use", version = "0.5.0")

# linters
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    commit = "c4c4b9ce5693b26ec6b8e7b0af3db59a3092d540",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

bazel_dep(name = "bazel_clang_format", dev_dependency = True)
git_override(
    module_name = "bazel_clang_format",
    commit = "1fd2a042798ede8d6f5498ea92287bc1204260fa",
    remote = "https://github.com/oliverlee/bazel_clang_format.git",
)
