load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

common_copts = [
    "-std=c++20",
    "-fexceptions",
    "-frtti",
]


cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = common_copts,
    deps = [
        "@boost.asio",
    ],
)


cc_binary(
    name = "app",
    srcs = ["app.cpp", "session.hpp", "server.hpp"],
    copts = common_copts+["-Wall", "-Wextra"],
    deps = [
        "@boost.asio",
        "@boost.system",
    ],
)