load("@rules_cc//cc:cc_binary.bzl", "cc_binary")


common_copts = [
    "-std=c++20",
    "-fexceptions",
    "-frtti",
    "-g",
    "-O0",
]


cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = common_copts,
    deps = [
        "@boost.asio",
    ],
)


cc_binary(
    name = "app",
    srcs = ["app.cpp", "session.hpp", "server.hpp", "database.hpp"],
    copts = common_copts + [
        "-Wall",
        "-Wextra",
    ] + select({
        "@platforms//os:macos": [
            "-I/usr/local/include",
        ],
        "@platforms//os:linux": [
            "-I/usr/include/postgresql",
            "-I/usr/local/include",
        ],
        "//conditions:default": [
            "-I/usr/local/include",
        ],
    }),
    deps = [
        "@boost.asio",
        "@boost.system",
    ],
    linkopts = select({
        "@platforms//os:macos": [
            "-L/usr/local/lib",
            "-lpqxx",
            "-lpq",
        ],
        "@platforms//os:linux": [
            "-L/usr/lib/x86_64-linux-gnu",
            "-L/usr/local/lib",
            "-lpqxx",
            "-lpq",
        ],
        "//conditions:default": [
            "-L/usr/local/lib",
            "-lpqxx",
            "-lpq",
        ],
    }),
)